--- a/5-sem/ruby/lab-7/RoR_Project/app/assets/stylesheets/application.css
+++ b/5-sem/ruby/lab-7/RoR_Project/app/assets/stylesheets/application.css
@@ -13,3 +13,214 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+.header {
+    background: linear-gradient(to right, #FFA500, #FFD700, #FFA500);
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.header h1 {
+    margin: 0;
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.main-content {
+    padding: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.footer {
+    background: linear-gradient(to top, #00BFFF, #87CEFA);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.footer:before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 0;
+    right: 0;
+    height: 10px;
+    background: inherit;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.student-list {
+    border: 2px solid black;
+    background-color: #FFECB3;
+    list-style-type: none;
+    padding: 20px;
+    margin: 0;
+}
+
+.student-list li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.student-name {
+    font-weight: bold;
+}
+.btn-smpl {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+.btn {
+    padding: 10px 20px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    transform: scale(1.05);
+}
+
+.btn-show {
+    background-color: #007BFF;
+    border: none;
+}
+
+.btn-create {
+    background-color: #28A745;
+    border: none;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.btn-edit {
+    background-color: #007bff;
+}
+
+.btn-delete {
+    background-color: #dc3545;
+}
+
+.btn-back {
+    background-color: #28a745;
+}
+
+.student-actions {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.student-info dl {
+    display: grid;
+    grid-template-columns: auto auto;
+    background: #f9f9f9;
+    border: 1px solid #ddd;
+    padding: 20px;
+}
+
+.student-info dt {
+    font-weight: bold;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.student-info dd {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    margin: 0;
+}
+
+.btn-cr2 {
+    background-color: #007bff;
+}
+
+.create .container {
+    background: #f9f9f9;
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin: 20px auto;
+    width: 50%;
+}
+
+.field {
+    margin-bottom: 15px;
+}
+
+.field label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.field input[type="text"],
+.field input[type="number"]{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.actions {
+    text-align: center;
+    padding-top: 20px;
+}
+
+.checkbox-group {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 15px;
+
+}
+
+.checkbox-group .field {
+    display: flex;
+    align-items: flex-start;
+    padding-right: 20px;
+}
+.field input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 25px; /* large size */
+    height: 25px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.field input[type="checkbox"]:checked {
+    background-color: #28a745;
+}
+
+.lib {
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 10px;
+}
