--- a/5-sem/ruby/lab-7/RoR_Project/app/views/layouts/application.html.erb
+++ b/5-sem/ruby/lab-7/RoR_Project/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RoRProject</title>
+    <title>My App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+  <header class="header">
+    <div class="header-content">
+      <h1>My App</h1>
+    </div>
+  </header>
+  <main class="main-content">
     <%= yield %>
+  </main>
+
+  <footer class="footer">
+  </footer>
   </body>
 </html>
